// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confidential merge request project form group component renders empty state when response is empty 1`] = `
<div
  class="confidential-merge-request-fork-group form-group"
>
  <label>
    Project
  </label>
  <div>
    <p
      class="gl-mb-0 gl-mt-1 gl-text-subtle"
    >
      No forks are available to you.
      <br />
      To protect this issue's confidentiality,
      <a
        class="help-link"
        href="https://test.com"
        target="_blank"
      >
        fork this project
      </a>
      and set the fork's visibility to private.
      <gl-link-stub
        class="gl-bg-transparent gl-inline-block gl-p-0 gl-w-auto"
        href="/help"
        target="_blank"
      >
        <help-icon-stub
          aria-label="Read more"
        />
      </gl-link-stub>
    </p>
  </div>
</div>
`;

exports[`Confidential merge request project form group component renders fork dropdown 1`] = `
<div
  class="confidential-merge-request-fork-group form-group"
>
  <label>
    Project
  </label>
  <div>
    <dropdown-stub
      projects="[object Object],[object Object]"
      selectedproject="[object Object]"
    />
    <p
      class="gl-mb-0 gl-mt-1 gl-text-subtle"
    >
      To protect this issue's confidentiality, a private fork of this project was selected.
      <gl-link-stub
        class="gl-bg-transparent gl-inline-block gl-p-0 gl-w-auto"
        href="/help"
        target="_blank"
      >
        <help-icon-stub
          aria-label="Read more"
        />
      </gl-link-stub>
    </p>
  </div>
</div>
`;
